2008-02-04  Inge Wallin  <inge@lysator.liu.se>

	Hopefully fix the crash in goHome in the qt only version.
	* src/lib/MarbleWidget.cpp (class MarbleWidgetPrivate): Disable
	m_homePoint and m_homeZoom.
	(home, setHome*2, goHome): Immediately call same in MarbleMap.
	

	* src/lib/MarbleMap.cpp (construct): Don't connect to
	enableInput() since that slot is only relevant to the widget.

	More fixes in the MarbleWidget / MarbleMap split.
	* src/lib/MarbleMap.h: Make MarbleWidget a friend of MarbleMap
	* src/lib/MarbleWidget.cpp: More fixes for MarbleWidget to use
	MarbleMap.
	* src/lib/MarbleWidgetInputHandler.cpp: indent better

2008-02-03  Inge Wallin  <inge@lysator.liu.se>

	Start to use the MarbleMap in MarbleWidget.
	NOTE: THIS DOESN'T FULLY WORK!
	      I have to switch computer now, and I'm really sorry about
	      this.  Navigation with the keyboard works, but not yet with
	      the mouse, as the integration is not yet 100%.	
	* src/lib/MarbleWidget.cpp (class MarbleWidgetPrivate): Contain a
	MarbleMap.
	(class MarbleWidget): Use the MarbleMap whereever possible.
	* src/lib/MarbleMap.h (doPaint): now a public function.
	* src/lib/MarbleMap.cpp: some updates for use in MarbleWidget.
	* src/lib/ViewParams.cpp: Cleaning
	
2008-02-02  Inge Wallin  <inge@lysator.liu.se>

	First step of the new widgetless marble
	* CMakeLists.cpp: Add MarbleMap.{h,cpp}
	* MarbleMap.{h,cpp}: New files
	* src/lib/MarbleModel.{h,cpp} (MarbleModel): Make parent a QObject
	(setMapTheme): Use a QObject instead of a QWidget

2008-02-01  Inge Wallin  <inge@lysator.liu.se>

	Don't include unnecessary files.
	* src/lib/MarbleWidget.{h,cpp}

	Make all uses of BoundingBox in parameters references.
	* src/marble_part.cpp:
	* src/MarbleTest.cpp
	* src/lib/BoundingBox.cpp
	* src/lib/FileViewModel.{h,cpp}
	* src/lib/MarbleControlBox.cpp
	* src/lib/MarbleLegendBrowser.cpp
	* src/lib/MarbleModel.{h,cpp}
	* src/lib/AbstractLayer/AbstractLayer.{h,cpp}